--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "name": "Robert Manolea",
     "email": "manolea.robert@gmail.com"
   },
-  "contributors": [
-    {
+  "contributors": [{
       "name": "Robert Manolea",
       "email": "manolea.robert@gmail.com"
     },
@@ -33,7 +32,7 @@
     "express": "^4.15.2",
     "express-rate-limit": "^2.6.0",
     "helmet": "^3.5.0",
-    "lol-riot-api-module": "^2.0.0",
+    "lol-riot-api-module": "^2.0.1",
     "prompt": "^1.0.0",
     "redis": "^2.7.1"
   },
