--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"apiKey":"RGAPI-bd97bcaf-8801-606f-3f1e-12b806d73a8f","port":8080,"region":"euw","cache":"memory"}
+{"apiKey":"RGAPI-bd97bcaf-8801-606f-3f1e-12b806d73a8f","port":"8080","region":"euw","cache":"redis","cacheHost":"127.0.0.1","cachePort":6379}
