--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "apicache": "0.8.7",
     "connect-redis": "^3.3.0",
+    "cookie-session": "^1.3.0",
     "cors": "2.8.4",
     "expandjs": "1.1.1",
     "express": "4.15.4",
